<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:gravity="end"
        android:padding="16dp"
        android:text="@string/default_result" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="4"
        android:layout_marginTop="16dp">

        <!-- Botones numéricos y de operación -->
        <Button android:id="@+id/button_1"  android:text="@string/uno" />
        <Button android:id="@+id/button_2"  android:text="@string/dos" />
        <Button android:id="@+id/button_3"  android:text="@string/tres" />
        <Button android:id="@+id/button_plus" android:text="@string/button_add" />

        <Button android:id="@+id/button_4"  android:text="@string/cuatro" />
        <Button android:id="@+id/button_5"  android:text="@string/cinco" />
        <Button android:id="@+id/button_6"  android:text="@string/seis" />
        <Button android:id="@+id/button_minus" android:text="@string/button_subtract" />

        <Button android:id="@+id/button_7"  android:text="@string/siete" />
        <Button android:id="@+id/button_8"  android:text="@string/ocho" />
        <Button android:id="@+id/button_9"  android:text="@string/nueve" />
        <Button android:id="@+id/button_multiply" android:text="@string/button_multiply" />

        <Button android:id="@+id/button_clear" android:text="@string/button_clear" />
        <Button android:id="@+id/button_0" android:text="@string/cero" />
        <Button android:id="@+id/button_equals" android:text="@string/button_equals" />
        <Button android:id="@+id/button_divide" android:text="@string/button_divide" />
    </GridLayout>

</LinearLayout>
